--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,1 +1,146 @@
 @import '~bulma/bulma.sass';
+@import url('https://fonts.googleapis.com/css?family=Roboto:700,900');
+
+@font-face {
+  font-family: 'Graphique';
+  src: url('./fonts/Graphique\ W01\ Regular.ttf');
+}
+
+//* CSS for UI and Home page
+@function makelongshadow($length,$angle) {
+  $val: 0px 0px transparent;
+  @for $i from 1 through $length {
+    $val: #{$val}, #{$i}px #{$i*$angle}px #aaa;
+  }
+  @return $val;
+}
+
+
+
+body {
+  overflow: hidden;
+
+}
+
+.title {
+  text-align: center;
+  font-family: 'Roboto';
+  font-size: 12vmin;
+  font-weight: 700;
+  animation: netflix_style 3.5s infinite;
+  outline: none;
+  white-space: nowrap;
+}
+
+@keyframes netflix_style {
+  0% {
+    text-shadow: makelongshadow(100,1);
+    color:#f3f3f3;
+    transform: scale(1.5, 1.5);
+  }
+  10% {
+    text-shadow: makelongshadow(100,1.5);
+    color:#f3f3f3;
+    transform: scale(1.5, 1.5);
+  }
+  15% {
+     color:#f3f3f3;
+  }
+  20% {    
+    color:#e90418;
+    text-shadow: none;
+    transform: scale(1.1, 1.1);
+  }
+  75% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 0;    
+    color:#e90418;
+    transform: scale(0.85, 0.9);
+  }
+  
+  100% {
+    opacity: 0;
+  }
+}
+
+
+.hero { 
+  background-color: rgb(53, 53, 53);
+}
+div { 
+  justify-content: center;
+  align-items: center;
+}
+.title {
+  padding: 15px;
+}
+.card { 
+  
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 25vw;
+  // width: 300px;  
+  max-width: 450px;  
+  min-width: 350px;
+}
+
+.card img {
+  width: 20vw;
+  // max-height: 350px;
+  max-width: 420px;
+  min-width: 320px;
+  
+}
+
+.card-container {
+  opacity: 0.8;
+  align-items: center;
+  display: flex;
+  text-align: center;
+}
+.card-text {
+  line-height: 2.5;
+}
+.movie-title {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+.selection-buttons {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+.next-movie.button {
+  background-color: red;
+  color: white;
+}
+.picked-movie.button {
+  background-color: limegreen;
+  color: white;
+}
+.button {
+  margin: 15px;
+}
+.main-button {
+  background-color: red;
+  color: white;
+}
+.counter {
+  display: flex;
+  font-size: 2em;
+}
+.spinner-img {
+  background-image: url('./images/Reload-2s-217px.png');
+  width: 200px;
+  height: 200px;
+}
+
+//* CSS for Problem Page
+div.hero-body div.container.has-text-centered {
+  font-family: Graphique;
+  font-size: 40px;
+  color: red;
+}
