--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,95 +7,57 @@
 }
 
 //* CSS for UI and Home page
-@function makelongshadow($length,$angle) {
-  $val: 0px 0px transparent;
-  @for $i from 1 through $length {
-    $val: #{$val}, #{$i}px #{$i*$angle}px #aaa;
-  }
-  @return $val;
-}
 
-
-
-body {
-  overflow: hidden;
-
-}
-
-.title {
+.homepagetitle {
   text-align: center;
-  font-family: 'Roboto';
-  font-size: 12vmin;
+  font-family: 'Graphique';
+  font-size: 19vmin;
   font-weight: 700;
-  animation: netflix_style 3.5s infinite;
-  outline: none;
-  white-space: nowrap;
+  color: red;
 }
-
-@keyframes netflix_style {
-  0% {
-    text-shadow: makelongshadow(100,1);
-    color:#f3f3f3;
-    transform: scale(1.5, 1.5);
-  }
-  10% {
-    text-shadow: makelongshadow(100,1.5);
-    color:#f3f3f3;
-    transform: scale(1.5, 1.5);
-  }
-  15% {
-     color:#f3f3f3;
-  }
-  20% {    
-    color:#e90418;
-    text-shadow: none;
-    transform: scale(1.1, 1.1);
-  }
-  75% {
-    opacity: 1;
-  }
-  80% {
-    opacity: 0;    
-    color:#e90418;
-    transform: scale(0.85, 0.9);
-  }
-  
-  100% {
-    opacity: 0;
-  }
-}
-
-
-.hero { 
-  background-color: rgb(53, 53, 53);
+.homepagecontainer, .problempagecontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 div { 
   justify-content: center;
   align-items: center;
 }
+.hero { 
+  background-color: rgb(53, 53, 53);
+}
+
+.UI {
+  background-image: url('https://media.giphy.com/media/Y8a0CT2xsbo9G/giphy.gif');
+  background-size: cover; 
+  background-repeat: no-repeat;
+}
+
+.hero-body {
+  flex-direction: column;
+  color: white;
+}
+
+
+
 .title {
   padding: 15px;
 }
 .card { 
-  
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 25vw;
-  // width: 300px;  
-  max-width: 450px;  
-  min-width: 350px;
+  width: 45vw;  
+  max-width: 350px;  
+  min-width: 300px;
 }
-
 .card img {
-  width: 20vw;
-  // max-height: 350px;
-  max-width: 420px;
-  min-width: 320px;
-  
+  width: 40vw;
+  max-width: 300px;
 }
-
 .card-container {
+  flex-shrink: 4;
   opacity: 0.8;
   align-items: center;
   display: flex;
@@ -114,11 +76,9 @@ div {
   justify-content: center;
 }
 .next-movie.button {
-  background-color: red;
   color: white;
 }
 .picked-movie.button {
-  background-color: limegreen;
   color: white;
 }
 .button {
@@ -127,9 +87,13 @@ div {
 .main-button {
   background-color: red;
   color: white;
+
 }
 .counter {
+  margin: 20px;
+  // color: white;
   display: flex;
+  flex-direction: column;
   font-size: 2em;
 }
 .spinner-img {
@@ -137,6 +101,13 @@ div {
   width: 200px;
   height: 200px;
 }
+
+.congrats { 
+  background-image: url('https://media.giphy.com/media/bb0Xwo6UoHTPy/giphy.gif');
+  background-size: cover; 
+  background-repeat: no-repeat;
+ }
+
 
 //* CSS for Problem Page
 div.hero-body div.container.has-text-centered {
